--- a/index.html
+++ b/index.html
@@ -16,23 +16,26 @@
 	</nav>
 
 	<div id="welcome-section">
-		<h1>Hi, I am Mark. just a random developer</h1>
+		<h1>Hi, I am Repteek. <br />just a random developer</h1>
 	</div>
 	<div id="projects">
-			<div class="project-tile" id="tribute-page">
-				<a href="https://codepen.io/whydobirds311/full/xxZpXGr" target="_blank"><h2>MCR - Tribute Page</h2></a>
-			</div>
-			<div class="project-tile" id="survey-form">
-				<a href="https://codepen.io/whydobirds311/full/bGEzPqp" target="_blank"><h2>Survey Form</h2></a>
-			</div>
-			<div class="project-tile" id="landing-page">
-				<a href="https://codepen.io/whydobirds311/full/bGEZpgz" target="_blank"><h2>Landing Page</h2></a>
-			</div>
-			<div class="project-tile" id="technical-documentation">
-				<a href="https://codepen.io/whydobirds311/full/NWbWZgY" target="_blank"><h2>Technical Documentation</h2></a>
-			</div>
-			<div class="project-tile" id="css-grid">
-				<a href="https://codepen.io/whydobirds311/full/MWyJbPQ" target="_blank"><h2>CSS Grid Implementation</h2></a>
+			<h2>Here are some of my projects</h2>
+			<div class="grid">
+				<div class="project-tile" id="tribute-page">
+					<a href="https://codepen.io/whydobirds311/full/xxZpXGr" target="_blank"><h2>MCR - Tribute Page</h2></a>
+				</div>
+				<div class="project-tile" id="survey-form">
+					<a href="https://codepen.io/whydobirds311/full/bGEzPqp" target="_blank"><h2>Survey Form</h2></a>
+				</div>
+				<div class="project-tile" id="landing-page">
+					<a href="https://codepen.io/whydobirds311/full/bGEZpgz" target="_blank"><h2>Landing Page</h2></a>
+				</div>
+				<div class="project-tile" id="technical-documentation">
+					<a href="https://codepen.io/whydobirds311/full/NWbWZgY" target="_blank"><h2>Technical Documentation</h2></a>
+				</div>
+				<div class="project-tile" id="css-grid">
+					<a href="https://codepen.io/whydobirds311/full/MWyJbPQ" target="_blank"><h2>CSS Grid Implementation</h2></a>
+				</div>
 			</div>
 	</div>
 	<div id="contact">
